--- a/mdp-app/spa-angular/src/app/components/mahasiswa/mahasiswa.component.html
+++ b/mdp-app/spa-angular/src/app/components/mahasiswa/mahasiswa.component.html
@@ -1,1 +1,249 @@
-<p>mahasiswa works!</p>
+<div class="container mt-4">
+    <h2>Daftar Mahasiswa</h2>
+  
+    <!-- Tombol untuk membuka modal -->
+    <button
+      type="button"
+      class="btn btn-primary mb-3"
+      data-bs-toggle="modal"
+      data-bs-target="#tambahMahasiswaModal"
+    >
+      Tambah Mahasiswa
+    </button>
+  
+    <!-- Modal Tambah Fakultas -->
+    <div
+      class="modal fade"
+      id="tambahMahasiswaModal"
+      tabindex="-1"
+      aria-labelledby="tambahMahasiswaModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tambahMahasiswaModalLabel">
+              Tambah Mahasiswa
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="mahasiswaForm" (ngSubmit)="addMahasiswa()">
+              <div class="mb-3">
+                <label for="npm" class="form-label">Npm</label>
+                <input
+                  id="npm"
+                  type="text"
+                  class="form-control"
+                  formControlName="npm"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nama" class="form-label">Nama</label>
+                <input
+                  id="nama"
+                  type="text"
+                  class="form-control"
+                  formControlName="nama"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="jenis_kelamin" class="form-label">Jenis Kelamin</label>
+                <input
+                  id="jenis_kelamin"
+                  type="text"
+                  class="form-control"
+                  formControlName="jenis_kelamin"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="asal_sekolah" class="form-label">Asal Sekolah</label>
+                <input
+                  id="asal_sekolah"
+                  type="text"
+                  class="form-control"
+                  formControlName="asal_sekolah"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="foto" class="form-label">Foto</label>
+                <input
+                  id="foto"
+                  type="file"
+                  class="form-control"
+                  formControlName="foto"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="prodi" class="form-label">Prodi</label>
+                <input
+                  id="prodi"
+                  type="text"
+                  class="form-control"
+                  formControlName="prodi"
+                />
+              </div>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="isSubmitting"
+              >
+                {{ isSubmitting ? "Menyimpan..." : "Tambah Mahasiswa" }}
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Data Fakultas -->
+    <table class="table table-bordered table-striped" *ngIf="!isLoading">
+      <thead>
+        <tr>
+          <th>Npm</th>
+          <th>Nama</th>
+          <th>jenis Kelamin</th>
+          <th>Asal Sekolah</th>
+          <th>Foto</th>
+          <th>Prodi</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of mahasiswa">
+          <td>{{ item.npm }}</td>
+          <td>{{ item.nama }}</td>
+          <td>{{ item.jenis_kelamin }}</td>
+          <td>{{ item.asal_sekolah }}</td>
+          <td>{{ item.foto }}</td>
+          <td>{{ item.prodi_id.nama }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!-- <div class="container mt-4"> -->
+    <!-- Kontainer utama untuk daftar fakultas, memberikan margin atas menggunakan kelas Bootstrap "mt-4". -->
+    <!-- <h2>Daftar Mahasiswa</h2> -->
+    <!-- Judul halaman untuk daftar fakultas -->
+    
+    <!-- Loader -->
+    <!-- <div class="d-flex justify-content-center mt-4" *ngIf="isLoading"> -->
+      <!-- Loader ditampilkan jika properti `isLoading` bernilai true -->
+      <!-- <div class="spinner-border text-primary" role="status"> -->
+        <!-- Komponen spinner Bootstrap untuk menampilkan animasi loading -->
+        <!-- <span class="visually-hidden">Loading...</span> -->
+        <!-- Teks alternatif untuk pembaca layar, membantu aksesibilitas -->
+      <!-- </div>
+    </div> -->
+  
+    <!-- Data Fakultas -->
+    <!-- <table class="table table-bordered table-striped" *ngIf="!isLoading"> -->
+      <!-- Tabel ditampilkan hanya jika `isLoading` bernilai false -->
+      <!-- <thead>
+        <tr> -->
+          <!-- Baris header tabel -->
+          <!-- Kolom untuk menampilkan nama fakultas -->
+          <!-- <th>Npm</th>
+          <th>Nama</th>
+          <th>Jenis Kelamin</th>
+          <th>Asal Sekolah</th>
+          <th>Foto</th>
+          <th>Prodi</th> -->
+          <!-- Kolom untuk menampilkan nama dekan -->
+        <!-- </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of mahasiswa"> -->
+          <!-- Iterasi melalui array `fakultas` untuk setiap elemen -->
+          <!-- <td>{{ item.npm}}</td>
+          <td>{{ item.nama }}</td> -->
+        
+          <!-- Menampilkan properti `nama` dari setiap objek dalam array -->
+          <!-- <td>{{ item.jenis_kelamin }}</td>
+          <td>{{ item.asal_sekolah}}</td>
+          <td>{{ item.foto}}</td>
+          <td>{{ item.prodi_id.nama}}</td> -->
+          <!-- Menampilkan properti `singkatan` dari setiap objek dalam array -->
+        <!-- </tr>
+      </tbody>
+    </table>
+  </div> -->
+  
+  <!-- <div class="container my-5">
+      <h2>Data Mahasiswa</h2>
+  
+     
+      <div class="row">
+          
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="Foto Mahasiswa">
+                  <div class="card-body">
+                      <h5 class="card-title">Eric Candra</h5>
+                      <p class="card-text">NPM: 2226240059</p>
+                      <p class="card-text">Jenis Kelamin: Laki Laki</p>
+                      <p class="card-text">Prodi: Sistem Informasi</p>
+                      <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  </div>
+              </div>
+          </div>
+  
+  
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="Foto Mahasiswa">
+                  <div class="card-body">
+                      <h5 class="card-title">Puspita Sari</h5>
+                      <p class="card-text">NPM: 2226240123</p>
+                      <p class="card-text">Jenis Kelamin: Perempuan</p>
+                      <p class="card-text">Prodi: Teknik Informatika</p>
+                      <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  </div>
+              </div>
+          </div>
+  
+          <div class="col-md-4">
+              <div class="card">
+                  <img src="https://via.placeholder.com/150" class="card-img-top" alt="Foto Mahasiswa">
+                  <div class="card-body">
+                      <h5 class="card-title">Nabila</h5>
+                      <p class="card-text">NPM: 2226240124</p>
+                      <p class="card-text">Jenis Kelamin: Perempuan</p>
+                      <p class="card-text">Prodi: Informatika</p>
+                      <a href="#" class="btn btn-primary">Lihat Detail</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div> -->
+  
+  
+  <!-- <div class="container my-5">
+      <h2>Data Mahasiswa</h2>
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>No</th>
+            <th>Nama Mahasiswa</th>
+            <th>Singkatan</th>
+            <th>Aksi</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Erick Candra</td>
+            <td>EC</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Nabila</td>
+            <td>NB</td>
+          </tr>
+        </tbody>
+      </table>
+    </div> -->
