--- a/spa-angular/src/app/components/mahasiswa/mahasiswa.component.html
+++ b/spa-angular/src/app/components/mahasiswa/mahasiswa.component.html
@@ -1,1 +1,127 @@
-<p>mahasiswa works!</p>
+<div class="container mt-4">
+    <h2>Daftar Mahasiswa</h2>
+  
+    <!-- Tombol untuk membuka modal -->
+    <button
+      type="button"
+      class="btn btn-primary mb-3"
+      data-bs-toggle="modal"
+      data-bs-target="#tambahMahasiswaModal"
+    >
+      Tambah Mahasiswa
+    </button>
+  
+    <!-- Modal Tambah Fakultas -->
+    <div
+      class="modal fade"
+      id="tambahMahasiswaModal"
+      tabindex="-1"
+      aria-labelledby="tambahMahasiswaModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tambahMahasiswaModalLabel">
+              Tambah Mahasiswa
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="mahasiswaForm" (ngSubmit)="addMahasiswa()">
+              <div class="mb-3">
+                <label for="npm" class="form-label">Npm</label>
+                <input
+                  id="npm"
+                  type="text"
+                  class="form-control"
+                  formControlName="npm"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nama" class="form-label">Nama</label>
+                <input
+                  id="nama"
+                  type="text"
+                  class="form-control"
+                  formControlName="nama"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="jenis_kelamin" class="form-label">Jenis Kelamin</label>
+                <input
+                  id="jenis_kelamin"
+                  type="text"
+                  class="form-control"
+                  formControlName="jenis_kelamin"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="asal_sekolah" class="form-label">Asal Sekolah</label>
+                <input
+                  id="asal_sekolah"
+                  type="text"
+                  class="form-control"
+                  formControlName="asal_sekolah"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="foto" class="form-label">Foto</label>
+                <input
+                  id="foto"
+                  type="file"
+                  class="form-control"
+                  formControlName="foto"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="prodi" class="form-label">Prodi</label>
+                <input
+                  id="prodi"
+                  type="text"
+                  class="form-control"
+                  formControlName="prodi"
+                />
+              </div>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                [disabled]="isSubmitting"
+              >
+                {{ isSubmitting ? "Menyimpan..." : "Tambah Mahasiswa" }}
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Data Fakultas -->
+    <table class="table table-bordered table-striped" *ngIf="!isLoading">
+      <thead>
+        <tr>
+          <th>Npm</th>
+          <th>Nama</th>
+          <th>jenis Kelamin</th>
+          <th>Asal Sekolah</th>
+          <th>Foto</th>
+          <th>Prodi</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of mahasiswa">
+          <td>{{ item.npm }}</td>
+          <td>{{ item.nama }}</td>
+          <td>{{ item.jenis_kelamin }}</td>
+          <td>{{ item.asal_sekolah }}</td>
+          <td>{{ item.foto }}</td>
+          <td>{{ item.prodi_id.nama }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
