--- a/spa-angular/src/app/components/prodi/prodi.component.html
+++ b/spa-angular/src/app/components/prodi/prodi.component.html
@@ -110,4 +110,71 @@
         </div>
       </div>
     </div>
+    <!-- Modal Edit Prodi -->
+  <div
+  class="modal fade"
+  id="editProdiModal"
+  tabindex="-1"
+  aria-labelledby="editProdiModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editProdiModalLabel">
+          Ubah Program Studi
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="prodiForm" (ngSubmit)="updateProdi()">
+          <div class="mb-3">
+            <label for="editNama" class="form-label">Nama Prodi</label>
+            <input
+              id="editNama"
+              type="text"
+              class="form-control"
+              formControlName="nama"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="editSingkatan" class="form-label">Singkatan</label>
+            <input
+              id="editSingkatan"
+              type="text"
+              class="form-control"
+              formControlName="singkatan"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="editFakultas" class="form-label">Fakultas</label>
+            <select
+              id="editFakultas"
+              class="form-select"
+              formControlName="fakultas_id"
+            >
+              <option
+                *ngFor="let fakultas of fakultas"
+                [value]="fakultas._id"
+              >
+                {{ fakultas.nama }}
+              </option>
+            </select>
+          </div>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="isSubmitting"
+          >
+            {{ isSubmitting ? "Menyimpan..." : "Ubah Prodi" }}
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
+</div>
